add simply tooltips compatibility